Edit and New improvements

--- a/src/app/atms/collections/collection/collection.page.html
+++ b/src/app/atms/collections/collection/collection.page.html
@@ -72,6 +72,7 @@
                             mat-sort-header
                             mat-header-cell
                             *matHeaderCellDef
+                            class="lessonId"
                         >
                             Lesson
                         </th>
@@ -104,6 +105,7 @@
                         <th
                             mat-header-cell
                             *matHeaderCellDef
+                            class="actions"
                         >
                         </th>
                         <td
