--- a/src/app/atms/notes/notes.page.scss
+++ b/src/app/atms/notes/notes.page.scss
@@ -3,10 +3,19 @@ table {
   table-layout: fixed;
 }
 
-th, td {
+th,
+td {
   overflow: hidden;
   // width: 200px;
   text-overflow: ellipsis;
   white-space: nowrap;
-  text-align: center;
+  // text-align: center;
+}
+
+.lessonId {
+  width: 6rem;
+}
+
+.actions {
+  width: 4rem;
 }
