--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <ion-app>
     <ion-menu
         side="start"
-        menuId="m1"
+        menuId="SideDrawer"
     >
         <ion-header>
             <ion-toolbar>
-                <ion-title>ATMs Helper</ion-title>
+                <ion-title>ATM Tracker</ion-title>
             </ion-toolbar>
         </ion-header>
         <ion-content>
@@ -20,7 +20,7 @@
                             name="albums"
                             slot="start"
                         ></ion-icon>
-                        <ion-label>All Collections</ion-label>
+                        <ion-label>Collections</ion-label>
                     </ion-item>
                 </ion-menu-toggle>
                 <ion-menu-toggle>
