--- a/src/app/atms/collections/collection/collection.page.html
+++ b/src/app/atms/collections/collection/collection.page.html
@@ -4,7 +4,7 @@
             <ion-back-button defaultHref="/atms/tabs/collections"></ion-back-button>
         </ion-buttons>
 
-        <ion-title *ngIf="!isLoading && collection">{{collection.title}}</ion-title>
+        <ion-title>{{collectionId}}</ion-title>
     </ion-toolbar>
 </ion-header>
 
